# Stream-reader

./: .gitignore  Makefile  README.md  Soutenance SPARK.pptx  build.sbt  consignes.md  report.md
.github/workflows/: scala.yml
analyzer/: analyzer.ipynb  analyzer.py  build.sbt  corentin.ipynb  pyproject.toml
analyzer/project/project/: metals.sbt
analyzer/src/main/scala/: Main.scala
consumer/: build.sbt
consumer/main/src/scala/: Consumer.scala  Main.scala
consumer/src/main/scala/: Consumer.scala  ConsumerSpark.scala  DroneReport.scala  Main.scala
etude/: consignes.md
json/: generator.py  json_to_csv.py  pyproject.toml  s1.csv  s1.json  s2.csv  s2.json  s3.csv  s3.json
producer/: build.sbt
producer/src/main/scala/: Consumer.scala  DroneReport.scala  Main.scala  Producer.scala  SerdeDrone.scala  Stream_Kafka.scala
receiver/: build.sbt
receiver/src/main/scala/: Consumer.scala  Main.scala  Stream_Kafka.scala
ressources/: SPARK.drawio  architecture.drawio
src/main/scala/: Drone.scala  DroneReport.scala  Main.scala  Producer.scala  Stream_Kafka.scala
website/: Alert.py  Report.py  app.py  config.py  kafka.py  kafka_consumer.py  pyproject.toml
website/static/: styles.css
website/templates/: alert_list.html  index.html  report_list.html
