[tool.poetry]
name = "website"
version = "0.1.0"
description = "A web interface to display alert for PeaceMaker"
authors = ["lopilo24 <henri.jamet@epita.fr>"]

[tool.poetry.dependencies]
python = "3.9.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
