[tool.poetry]
name = "website"
version = "0.1.0"
description = "A web interface to display alert for PeaceMaker"
authors = ["lopilo24 <henri.jamet@epita.fr>"]

[tool.poetry.dependencies]
python = "3.9.7"
Flask = "^2.1.2"
kafka-python = "^2.0.2"
Turbo-Flask = "^0.8.0"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
